# orbo

./: .gitignore  .gitmodules  README.md  source_all.bash
orbo_simulation/src/vrep_orbo_simulation/: package.xml
orbo_simulation/src/vrep_orbo_simulation/launch/: vrep_orbo_engine_launch.launch
orbo_simulation_ws/src/vrep_orbo_simulation/: CMakeLists.txt
orbo_simulation_ws/src/vrep_orbo_simulation/launch/: vrep_orbo_rviz_launch.launch
orbo_ws/src/op3_description/launch/: fake_orbo_rviz.launch  orbo_rviz.launch
orbo_ws/src/op3_description/rviz/: op3.rviz
orbo_ws/src/op3_description/urdf/: orbo.urdf  orbo.urdf.xacro  orbo.visuals.xacro
orbo_ws/src/orbo_description/: CMakeLists.txt  package.xml
orbo_ws/src/orbo_description/launch/: fake_orbo_rviz.launch  op3_rviz.launch  orbo_rviz.launch
orbo_ws/src/orbo_description/rviz/: orbo.rviz
orbo_ws/src/orbo_description/urdf/: orbo.inertia.xacro  orbo.urdf  orbo.urdf.xacro  orbo.visuals.xacro  robotis_op3.urdf.xacro  robotis_op3.visuals.xacro
orbo_ws/src/orbo_kinematics_dynamics/: CMakeLists.txt  package.xml
orbo_ws/src/orbo_kinematics_dynamics/nbproject/: configurations.xml  project.xml
orbo_ws/src/orbo_kinematics_dynamics/src/: link_data.cpp  orbo_kinematics_dynamics.cpp
orbo_ws/src/orbo_manager/: CMakeLists.txt  package.xml
orbo_ws/src/orbo_manager/config/: dxl_init_orbo.yaml  offset_orbo.yaml  orbo.robot
orbo_ws/src/orbo_manager/launch/: orbo_manager.launch
orbo_ws/src/orbo_manager/nbproject/: configurations.xml  project.xml
vrep_ros_interface/src/vrep_ugv_plugin/: CMakeLists.txt
(+9 files in other folders)
