<?xml version="1.0"?>
<package format="2">
  <name>orbo_description</name>
  <version>0.0.1</version>
  <license>apache2</license>
  <maintainer email="harry.jacobs@students.plymouth.ac.uk">Harry Jacobs</maintainer>
  <description>
    The orbo_description package. Based on the op3_description package
  </description>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
</package>
